feat: 支持独立图片理解模型回退